--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,13 +71,17 @@ jobs:
         shell: cmd
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
+      
+      # AQUÍ ESTÁ EL CAMBIO IMPORTANTE: Agregamos -uwp
       - name: Compile
-        run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}"  -D officialBuild
+        run: haxelib run lime build windows -uwp --app-version="4.0.0-${{ github.run_id}}" -D officialBuild
+      
+      # AQUÍ CAMBIAMOS LA RUTA PARA QUE ENCUENTRE EL ARCHIVO DE XBOX
       - name: Publish Artifact
         uses: actions/upload-artifact@v4.3.4
         with:
-          name: windowsBuild
-          path: export/release/windows/bin
+          name: xboxBuild
+          path: export/release/windows/uwp/bin
   buildMac:
     runs-on: macos-15
 
