--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,16 +72,16 @@ jobs:
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       
-      # AQUÍ ESTÁ EL CAMBIO IMPORTANTE: Agregamos -uwp
+      # CAMBIO 1: QUITAMOS EL "-uwp" PARA QUE COMPILE COMO PC (C++)
       - name: Compile
-        run: haxelib run lime build windows -uwp --app-version="4.0.0-${{ github.run_id}}" -D officialBuild
+        run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}" -D officialBuild
       
-      # AQUÍ CAMBIAMOS LA RUTA PARA QUE ENCUENTRE EL ARCHIVO DE XBOX
+      # CAMBIO 2: ARREGLAMOS LA RUTA (Ya no busca en 'uwp')
       - name: Publish Artifact
         uses: actions/upload-artifact@v4.3.4
         with:
-          name: xboxBuild
-          path: export/release/windows/uwp/bin
+          name: windowsBuild
+          path: export/release/windows/bin
   buildMac:
     runs-on: macos-15
 
